--- a/stacksec.css
+++ b/stacksec.css
@@ -148,6 +148,17 @@ code p {
     color: white;
 }
 
+code pre {
+    border: none;
+    font-family: Consolas, monaco, monospace;
+    background-color: #333330;
+    font-size: 13px;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+
 body p>a, body p>i>a, tr>td>a {
     color: red;
 }
