--- a/stacksec.css
+++ b/stacksec.css
@@ -59,10 +59,6 @@ footer {
 	width: 10%;
 }
 
-#content-page {
-	width: 80%;
-}
-
 .table th {
    text-align: center;   
 }
@@ -149,8 +145,27 @@ p {
     background-color: #242423;
 }
 
+.image {
+	width: 100%;
+	height: 100%;
+}
+
 #content-img {
 	width: 10%;
+}
+
+@media (max-width:1920px) { 
+	#content-page {
+		width: 80%;
+	}
+}
+
+@media (max-width:576px) { 
+	#content-page { 
+		width: 100% !important;
+		padding-left: 2%;
+		padding-right: 2%;
+	}
 }
 
 code {
@@ -161,6 +176,8 @@ code {
     padding-top: 20px;
     padding-bottom: 10px;
     padding-left: 10px;
+	width: 100%;
+	overflow:auto;
 }
 
 .tag {
