--- a/stacksec.css
+++ b/stacksec.css
@@ -153,7 +153,13 @@ p {
 
 @media (max-width:1920px) { 
 	#content-page {
-		width: 80%;
+		width: 70%;
+	}
+	#navigation {
+		width: 15%;
+	}
+	#right-pane {
+		width: 15%;
 	}
 }
 
@@ -246,4 +252,15 @@ tbody {
 
 #contentlist li a {
   margin-top: -1px; /* Prevent double borders */
+}
+
+#content-page ul>li {
+	font-family: Consolas, monaco, monospace;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 16.4x;
+    color: #D6CDC9;
+ 	word-break: break-word;
 }
